tests/fail/02-nesting.stderr
error[E0277]: the trait bound `C: Sealed` is not satisfied
  --> $DIR/02-nesting.rs:26:6
   |
8  |                 #[sealed]
   |                 --------- required by this bound in `T`
9  |                 pub trait T {}
   |                           - required by a bound in this
...
26 | impl lets::attempt::some::nesting::T for C {}
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Sealed` is not implemented for `C`
